--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -12,23 +12,19 @@
 
 <body>
   <div id="login-app" class="formLogin">
-    <img id="logo" class ="logo" src="logo_Vid_CHAIN_vertical.png"></img>
+    <img id="logo" class ="logo" src="/assets/images/logo__Vidchain.png"></img>
     <div  class="formSquare">
-      <br>
-    <!-- <h2>{{subTitle}}</h2> -->
-    <div>
         <input type="hidden" id="csrf" name="_csrf" value={{csrfToken}}>
         <input type="hidden" name="challenge" value={{challenge}}>
         <button class="scanButton" v-on:click="sendSIOPClientUriBackend">Log in using VIDchain</button>
         <img id="qrImage" class="qrImage"></img>
         <br><br>
-        <input type="checkbox" id="remember" name="remember" v-bind:value="remember" value="1">
-        <label for="remember">Remember me</label>
-        <br>
+        <div class="remember">
+          <input type="checkbox" id="remember" name="remember" v-bind:value="remember" value="1">
+           <label for="remember">Remember me</label>
         </div>
     </div>
   </div>
-  <img id="qrImage"></img>
   <script>
     const app = new Vue({
       el: '#login-app',
@@ -114,13 +110,17 @@
         background-color: #00bf71;
         border-radius: 20px;
         color: #ffff;
-        width: 40%;
-        height: 60%;
-        margin-left: 30%;
-        text-align: center;
-        justify-content: center;
+        width: 45%;
+        height: 70%;
+        align-self: center;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
     }
     .formLogin {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
       background: #ffff;
       padding: 1rem 1.25rem;
       color: #00bf71;
@@ -129,12 +129,11 @@
       height: 100%;
       margin-left: -10px;
       margin-top: -10px;
-      text-align: center;
-      justify-content: center;
     }
     .logo{
-      width: 25%;
-      height: 30%;
+      width: 20%;
+      height: 25%;
+      align-self: center;
     }
     .scanButton {
       display: block;
@@ -142,22 +141,28 @@
       outline: none;
       border: none;
       background-color: #ffff;
-      width: 400px;
-      height: 70px;
+      width: 50%;
+      height: auto;
+      padding: 2%;
       border-radius: 30px;
       font-size: 1.5rem;
       font-weight: 600;
       color:  #00bf71;
       background-size: 100% 100%;
       box-shadow: 0 0 0 7px var(--light) inset;
-      margin-bottom: 15px;
-      margin-left: 15%;
+      align-self: center;
+      margin-top: 5%;
+      
     }
     .qrImage{
       width: 55%;
-      height: 55%;
+      height: auto;
       align-self: center;
       margin-top: 5%;
+    }
+    .remember{
+      align-self: center;
+      justify-content: end;
     }
     .back {
       background-color: #00bf71;
