added /static in src

--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -12,7 +12,7 @@
 
 <body>
   <div id="login-app" class="formLogin">
-    <img id="logo" class ="logo" src="/logo__Vidchain.png"></img>
+    <img id="logo" class ="logo" src="/static/logo__Vidchain.png"></img>
     <div  class="formSquare">
         <input type="hidden" id="csrf" name="_csrf" value={{csrfToken}}>
         <input type="hidden" name="challenge" value={{challenge}}>
