--- a/packages/identity-consent/views/consent.hbs
+++ b/packages/identity-consent/views/consent.hbs
@@ -20,12 +20,12 @@
           <input type="checkbox" id="requested_scope" value=requested_scope name="grant_scope" v-bind:value="requested_scope">
           <label for="requested_scope">requested_scope</label>
         </div> -->
-        <h1 class="title"> Hi {{user}} </h1>
+        <h1 class="title"> Hi, {{user}} </h1>
         <h3 class="subtitle">The application <strong>{{client.client_name}} {{client.client_id}}</strong> wants access resources on your behalf and to:</h3>
         <ul class="checkboxes">
           {{#each requested_scope}}
           <li>
-            <input type="checkbox" id={{this}} value={{this}} name="grant_scope" v-bind:value="requested_scope">
+            <input type="checkbox" id={{@index}} value={{this}} name="grant_scope" v-on:change="selected($event)">
             <label for={{this}}>{{this}}</label>
           </li>
           {{/each}}
@@ -69,17 +69,26 @@
             grant_scope: this.requested_scope
           };
           console.log(body);
-          axios.post('/consent', body)
-            .then ((res)=> window.location = res.data)
-            .catch ((error)=> console.log(error))
-        },
+          //axios.post('/consent', body)
+            //.then ((res)=> window.location = res.data)
+            //.catch ((error)=> console.log(error))
+        }, 
+        selected(type){
+          const grant_type = type.target.value;
+          //Checking if already exists, 
+          const position = this.requested_scope.indexOf(grant_type);
+          //If so, then delete form the array (it has been deselected);
+          if ( ~position ) this.requested_scope.splice(position, 1);
+          //otherwise add it to the array
+          else this.requested_scope.push(grant_type);
+        }
 
       },
       created() {
         if(client.logo_uri){
-            var img = document.getElementById('logo')
-            img.src = client.logo_uri
-        }
+            //var img = document.getElementById('logo')
+            //img.src = client.logo_uri
+        } 
       }
     });
 
@@ -87,8 +96,19 @@
 
   <style scoped>
     .title{
+      word-wrap: break-word;
+      -webkit-hyphens: auto;
+      -moz-hyphens: auto;
+      -ms-hyphens: auto;
+      -o-hyphens: auto;
+      hyphens: auto;
       align-self: center;
       color: #00bf71;
+    }
+    @media screen and (max-width: 768px) {
+    .title{
+        font-size:14px;
+    }
     }
     .subtitle{
       align-self: center;
