request to sessions to get the token

--- a/packages/identity-consent/views/consent.hbs
+++ b/packages/identity-consent/views/consent.hbs
@@ -40,10 +40,10 @@
           <label for="remember">Do not ask me again</label>
         </div>
         <div class="policy">
-          <a href=client.policy_uri>Policy </a>
+          <a href={{client.policy_uri}}>Policy </a>
         </div>
         <div class="policy">
-          <a href=client.tos_uri>Terms of Service </a> <br>
+          <a href={{client.tos_uri}}>Terms of Service </a> <br>
         </div>
       </div>
   </div>
