clean error in console in consent

--- a/packages/identity-consent/views/consent.hbs
+++ b/packages/identity-consent/views/consent.hbs
@@ -91,10 +91,10 @@
 
       },
       created() {
-        if(client.logo_uri){
+        //if(client.logo_uri){
             //var img = document.getElementById('logo')
             //img.src = client.logo_uri
-        } 
+        //} 
       }
     });
 
