--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -15,11 +15,12 @@
     <input type="hidden" id="csrf" name="_csrf" value={{csrfToken}}>
     <input type="hidden" name="challenge" value={{challenge}}>
     <img id="logo" class ="logo" src="/static/logo__Vidchain.png"></img>
-    <h1 class="subtitle">Login to the application</h1>
+    <h1 class="subtitle">Sign In with Vidchain</h1>
+    <h4 class="subtitle">Go to login in your Vidchain mobile app and scan the QR code.</h4>
         <img id="qrImage" class="qrImage"></img>
-        <button class="scanButton" v-on:click="sendSIOPClientUriBackend">Continue using Vidchain</button>
+        {{!-- <button class="scanButton" v-on:click="sendSIOPClientUriBackend">Continue using Vidchain</button> --}}
         <div class="remember">
-          <input type="checkbox" id="remember" name="remember" v-bind:value="remember" v-on:change="rememberSelected()" value="1">
+          <input type="checkbox" id="remember" name="remember" v-bind:value="remember" value="1">
           <label for="remember"><b>Remember me</b></label>
         </div>
   </div>
@@ -42,17 +43,7 @@
           this.validationResult = '';
           this.resetImg();
         },
-        sendSIOPClientUriBackend: function() {
-          this.resetVars();
-          let urlParams = new URLSearchParams(window.location.search);
-          let login_challenge = urlParams.get('login_challenge');
-          const data = {
-            clientUriRedirect: this.clientUriRedirect,
-            challenge: login_challenge
-          };
-          this.socket.emit('signIn', data);
-          
-        },
+
         receiveMessage(msg) {
           console.log(`recv: ${msg}`);
         },
@@ -61,19 +52,12 @@
           var img = document.getElementById('qrImage')
           img.src = qrResponse.imageQr
         },
-        rememberSelected(){
-          //Checking if already selected, 
-          if ( this.remember ) this.remember = false;
-          //otherwise it was false, so now true
-          else this.remember = true;
-        },
 
         signInResponse(msg) {
           let urlParams = new URLSearchParams(window.location.search);
           let login_challenge = urlParams.get('login_challenge');
           console.log(`recv: ${msg}`);
-          const response = JSON.parse(msg);
-          console.log(response);
+          const response = JSON.parse(msg)
           this.resetImg();
           this.validationResult = `Your Sign-In validation result is: ${response.validationResult}`;
           //this.did = `Your DID is: ${response.did}`;
@@ -81,7 +65,7 @@
             //Do Post to login
             const did = response.did 
 
-            console.log(this.remember);
+            //const did = "did:ebsi:0x2c8181B9bF7F8f708A7C68DaE04d6d56A87dFBD3"
             const body = {
               challenge: login_challenge,
               remember: this.remember,
@@ -95,7 +79,17 @@
       },
       created() {
         this.socket = io('/')
+        //Skip the click button functionality (do the request when opens)
+        let urlParams = new URLSearchParams(window.location.search);
+        let login_challenge = urlParams.get('login_challenge');
+        const data = {
+          clientUriRedirect: this.clientUriRedirect,
+          challenge: login_challenge
+        };
+        this.socket.emit('signIn', data);
+
         this.socket.on('signIn', (msg) => {
+          console.log(msg);
           this.receiveMessage(msg);
         });
         this.socket.on('printQR', (qrResponse) => {
