--- a/packages/identity-consent/views/consent.hbs
+++ b/packages/identity-consent/views/consent.hbs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VIDchain Login</title>
+  <link rel="apple-touch-icon" href="/static/logo__Vidchain.png" />
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
@@ -21,7 +22,7 @@
           <label for="requested_scope">requested_scope</label>
         </div> -->
         <h1 class="title"> Hi, {{user}} </h1>
-        <h3 class="subtitle">The application <strong>{{client.client_id}}</strong> wants access to your DID</h3>
+        <h3 class="subtitle">The application <strong>{{client.client_name}}</strong> wants access to your DID</h3>
         {{!-- <ul class="checkboxes">
           {{#each requested_scope}}
           <li>
