--- a/packages/identity-consent/views/consent.hbs
+++ b/packages/identity-consent/views/consent.hbs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VIDchain Login</title>
   <link rel="apple-touch-icon" href="/static/logo__Vidchain.png" />
+  <link rel="icon" href="/static/logo__Vidchain.png" />
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
