--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -17,8 +17,8 @@
     <input type="hidden" id="csrf" name="_csrf" value={{csrfToken}}>
     <input type="hidden" name="challenge" value={{challenge}}>
     <img id="logo" class ="logo" src="/static/logo__Vidchain.png"></img>
-    <h1 class="subtitle">Sign In with Vidchain</h1>
-    <h4 class="subtitle">Go to login in your Vidchain mobile app and scan the QR code.</h4>
+    <h1 class="subtitle">Authenticate with your VIDchain wallet</h1>
+    <h4 class="subtitle">Go to login in your VIDchain mobile app and scan the QR code.</h4>
         <img id="qrImage" class="qrImage"></img>
         {{!-- <button class="scanButton" v-on:click="sendSIOPClientUriBackend">Continue using Vidchain</button> --}}
         <div class="remember">
