encode/decode client_name to allow spaces

--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -88,7 +88,7 @@
         const data = {
           clientUriRedirect: this.clientUriRedirect,
           challenge: login_challenge,
-          client_name: document.getElementById('client_name').value
+          client_name: decodeURIComponent(document.getElementById('client_name').value)
         };
         this.socket.emit('signIn', data);
 
