--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -22,10 +22,10 @@
     <h4 class="subtitle">Go to login in your VIDchain mobile app and scan the QR code.</h4>
         <img id="qrImage" class="qrImage"></img>
         {{!-- <button class="scanButton" v-on:click="sendSIOPClientUriBackend">Continue using Vidchain</button> --}}
-        <div class="remember">
+        {{!-- <div class="remember">
           <input type="checkbox" id="remember" name="remember" v-bind:value="remember" value="1">
           <label for="remember"><b>Remember me</b></label>
-        </div>
+        </div> --}}
   </div>
   <script>
     const app = new Vue({
