--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -17,6 +17,7 @@
     <input type="hidden" id="csrf" name="_csrf" value={{csrfToken}}>
     <input type="hidden" name="challenge" value={{challenge}}>
     <input type="hidden" id="client_name" name="client_name" value={{client_name}}>
+    <input type="hidden" id="scope" name="scope" value={{scope}}>
     <img id="logo" class ="logo" src="/static/logo__Vidchain.png"></img>
     <h1 class="subtitle">Authenticate with your VIDchain wallet</h1>
     <h4 class="subtitle">Go to login in your VIDchain mobile app and scan the QR code.</h4>
@@ -101,6 +102,7 @@
           clientUriRedirect: this.clientUriRedirect,
           challenge: login_challenge,
           client_name: decodeURIComponent(document.getElementById('client_name').value),
+          scope: decodeURIComponent(document.getElementById('scope').value),
         };
         this.socket.emit('signIn', data);
 
