--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -73,12 +73,14 @@
           if(response.validationResult){
             //Do Post to login
             const did = response.did 
+            const jwt = response.jwt 
 
             //const did = "did:ebsi:0x2c8181B9bF7F8f708A7C68DaE04d6d56A87dFBD3"
             const body = {
               challenge: login_challenge,
               remember: this.remember,
-              did
+              did,
+              jwt
             };
             axios.post('/login', body)
             .then ((res)=> window.location = res.data)
