chore: added logs

--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -79,6 +79,7 @@
               did,
               jwt
             };
+            console.log("going to login");
             axios.post('/login', body)
               .then((res) => window.location = res.data)
               .catch((error) => console.log(error))
@@ -112,6 +113,7 @@
           this.displayQr(qrResponse);
         });
         this.socket.on('signInResponse', (msg) => {
+          console.log("arrived from backend");
           this.signInResponse(msg);
         });
       },
