--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -121,14 +121,14 @@
   <style scoped>
     .subtitle {
       align-self: center;
-      color: #00bf71;
+      color: white;
     }
 
     .formLogin {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      background: #ffffff;
+      background: rgba(21, 26, 53, 1);
       padding: 1rem 1.25rem;
     }
 
@@ -143,13 +143,13 @@
       cursor: pointer;
       outline: none;
       border: none;
-      background-color: #00bf71;
+      background-color: white;
       height: auto;
       padding: 2%;
       border-radius: 20px;
       font-size: 1.5rem;
       font-weight: 600;
-      color: #ffffff;
+      color: rgba(21, 26, 53, 1);
       background-size: 100% 100%;
       box-shadow: 0 0 0 7px var(--light) inset;
       align-self: center;
@@ -164,7 +164,7 @@
     .remember {
       align-self: center;
       margin-top: 2%;
-      color: #00bf71;
+      color: white;
     }
   </style>
 </body>
