style: white logo

--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -18,7 +18,7 @@
     <input type="hidden" name="challenge" value={{challenge}}>
     <input type="hidden" id="client_name" name="client_name" value={{client_name}}>
     <input type="hidden" id="scope" name="scope" value={{scope}}>
-    <img id="logo" class="logo" src="/static/logo__Vidchain.png"></img>
+    <img id="logo" class="logo" src="/static/validated_white.png"></img>
     <h1 class="subtitle">Authenticate with your VIDchain wallet</h1>
     <h4 class="subtitle">Go to login in your VIDchain mobile app and scan the QR code.</h4>
     <img id="qrImage" class="qrImage"></img>
@@ -130,6 +130,8 @@
       align-items: flex-start;
       background: rgba(21, 26, 53, 1);
       padding: 1rem 1.25rem;
+      margin: 0;
+      height: 100%;
     }
 
     .logo {
