style: fix padding

--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -129,9 +129,8 @@
       flex-direction: column;
       align-items: flex-start;
       background: rgba(21, 26, 53, 1);
-      padding: 1rem 1.25rem;
-      margin: 0;
-      height: 100%;
+      padding-bottom: 100%;
+      padding-top: 150px;
     }
 
     .logo {
