fix: listCredentials id

--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -21,7 +21,7 @@
     <img id="logo" class="logo" src="/static/validated_white.png"></img>
     <h1 class="subtitle">Authenticate with your VIDchain wallet</h1>
     <h3 class="subtitle" id="message"></h3>
-    <h3 class="subtitle" id="message"></h3>
+    <h3 class="subtitle" id="listCredentials"></h3>
     <h4 class="subtitle">Go to login in your VIDchain mobile app and scan the QR code.</h4>
     <img id="qrImage" class="qrImage"></img>
     {{!-- <button class="scanButton" v-on:click="sendSIOPClientUriBackend">Continue using Vidchain</button> --}}
