--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -20,6 +20,8 @@
     <input type="hidden" id="scope" name="scope" value={{scope}}>
     <img id="logo" class="logo" src="/static/validated_white.png"></img>
     <h1 class="subtitle">Authenticate with your VIDchain wallet</h1>
+    <h3 class="subtitle" id="message"></h3>
+    <h3 class="subtitle" id="listCredentials"></h3>
     <h4 class="subtitle">Go to login in your VIDchain mobile app and scan the QR code.</h4>
     <img id="qrImage" class="qrImage"></img>
     {{!-- <button class="scanButton" v-on:click="sendSIOPClientUriBackend">Continue using Vidchain</button> --}}
@@ -46,6 +48,14 @@
           this.error = '';
           this.validationResult = '';
           this.resetImg();
+        },
+
+        showRequestMessage(){
+          let urlParams = new URLSearchParams(window.location.search);
+          let scope = decodeURIComponent(document.getElementById('scope').value);
+          let formattedClient =  decodeURIComponent(document.getElementById('client_name').value);
+          document.getElementById('message').innerHTML = `${formattedClient} requests providing the following credentials to login:`;
+          document.getElementById('listCredentials').innerHTML = `${scope.replace("openid,","")}`;
         },
 
         displayQr(qrResponse) {
@@ -92,6 +102,7 @@
         }
       },
       created() {
+        this.showRequestMessage();
         this.socket = io('/', {
           transports: ["websocket"],
         });
@@ -130,7 +141,7 @@
       align-items: flex-start;
       background: rgba(21, 26, 53, 1);
       padding-bottom: 100%;
-      padding-top: 150px;
+      padding-top: 120px;
     }
 
     .logo {
